satsolver/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> spec
Rule 1     spec -> statement
Rule 2     spec -> statement spec
Rule 3     statement -> PREDICATES predlist SEMICOLON
Rule 4     predlist -> ID SLASH NUMBER
Rule 5     predlist -> ID SLASH NUMBER COMMA predlist
Rule 6     statement -> VARIABLES idlist SEMICOLON
Rule 7     idlist -> ID
Rule 8     idlist -> ID COMMA idlist
Rule 9     statement -> TYPE ID EQ setexpr SEMICOLON
Rule 10    statement -> boolexpr SEMICOLON
Rule 11    setexpr -> LBRACK NUMBER COMMA NUMBER RBRACK
Rule 12    setexpr -> LBRACE stringlist RBRACE
Rule 13    setexpr -> ID
Rule 14    stringlist -> enum
Rule 15    enum -> ID
Rule 16    enum -> NUMBER
Rule 17    stringlist -> enum COMMA stringlist
Rule 18    boolexpr -> boolexpr AND boolexpr
Rule 19    boolexpr -> boolexpr OR boolexpr
Rule 20    boolexpr -> boolexpr XOR boolexpr
Rule 21    boolexpr -> boolexpr IMPL boolexpr
Rule 22    boolexpr -> boolexpr EQVI boolexpr
Rule 23    boolexpr -> FORSOME LPAREN paramlist RPAREN boolexpr
Rule 24    boolexpr -> FORALL LPAREN paramlist RPAREN boolexpr
Rule 25    boolexpr -> ATMOST NUMBER LPAREN paramlist RPAREN boolexpr
Rule 26    boolexpr -> ATLEAST NUMBER LPAREN paramlist RPAREN boolexpr
Rule 27    boolexpr -> EXACTLY NUMBER LPAREN paramlist RPAREN boolexpr
Rule 28    boolexpr -> NOT boolexpr
Rule 29    boolexpr -> atom
Rule 30    boolexpr -> LPAREN boolexpr RPAREN
Rule 31    boolexpr -> numexpr GT numexpr
Rule 32    boolexpr -> numexpr LT numexpr
Rule 33    boolexpr -> numexpr GEQ numexpr
Rule 34    boolexpr -> numexpr LEQ numexpr
Rule 35    boolexpr -> numexpr EQ numexpr
Rule 36    paramlist -> param
Rule 37    paramlist -> param COMMA paramlist
Rule 38    param -> ID COLON setexpr
Rule 39    numexpr -> LPAREN numexpr RPAREN
Rule 40    numexpr -> NUMBER
Rule 41    numexpr -> NID
Rule 42    numexpr -> numexpr PLUS numexpr
Rule 43    numexpr -> numexpr MINUS numexpr
Rule 44    numexpr -> numexpr TIMES numexpr
Rule 45    termlist -> term COMMA termlist
Rule 46    termlist -> term
Rule 47    term -> numexpr
Rule 48    atom -> ID
Rule 49    atom -> ID LPAREN termlist RPAREN

Terminals, with rules where they appear

AND                  : 18
ATLEAST              : 26
ATMOST               : 25
COLON                : 38
COMMA                : 5 8 11 17 37 45
EQ                   : 9 35
EQVI                 : 22
EXACTLY              : 27
FORALL               : 24
FORSOME              : 23
GEQ                  : 33
GT                   : 31
ID                   : 4 5 7 8 9 13 15 38 48 49
IMPL                 : 21
LBRACE               : 12
LBRACK               : 11
LEQ                  : 34
LPAREN               : 23 24 25 26 27 30 39 49
LT                   : 32
MINUS                : 43
NID                  : 41
NOT                  : 28
NUMBER               : 4 5 11 11 16 25 26 27 40
OR                   : 19
PLUS                 : 42
PREDICATES           : 3
RBRACE               : 12
RBRACK               : 11
RPAREN               : 23 24 25 26 27 30 39 49
SEMICOLON            : 3 6 9 10
SLASH                : 4 5
TIMES                : 44
TYPE                 : 9
VARIABLES            : 6
XOR                  : 20
error                : 

Nonterminals, with rules where they appear

atom                 : 29
boolexpr             : 10 18 18 19 19 20 20 21 21 22 22 23 24 25 26 27 28 30
enum                 : 14 17
idlist               : 6 8
numexpr              : 31 31 32 32 33 33 34 34 35 35 39 42 42 43 43 44 44 47
param                : 36 37
paramlist            : 23 24 25 26 27 37
predlist             : 3 5
setexpr              : 9 38
spec                 : 2 0
statement            : 1 2
stringlist           : 12 17
term                 : 45 46
termlist             : 45 49

Parsing method: LALR

state 0

    (0) S' -> . spec
    (1) spec -> . statement
    (2) spec -> . statement spec
    (3) statement -> . PREDICATES predlist SEMICOLON
    (6) statement -> . VARIABLES idlist SEMICOLON
    (9) statement -> . TYPE ID EQ setexpr SEMICOLON
    (10) statement -> . boolexpr SEMICOLON
    (18) boolexpr -> . boolexpr AND boolexpr
    (19) boolexpr -> . boolexpr OR boolexpr
    (20) boolexpr -> . boolexpr XOR boolexpr
    (21) boolexpr -> . boolexpr IMPL boolexpr
    (22) boolexpr -> . boolexpr EQVI boolexpr
    (23) boolexpr -> . FORSOME LPAREN paramlist RPAREN boolexpr
    (24) boolexpr -> . FORALL LPAREN paramlist RPAREN boolexpr
    (25) boolexpr -> . ATMOST NUMBER LPAREN paramlist RPAREN boolexpr
    (26) boolexpr -> . ATLEAST NUMBER LPAREN paramlist RPAREN boolexpr
    (27) boolexpr -> . EXACTLY NUMBER LPAREN paramlist RPAREN boolexpr
    (28) boolexpr -> . NOT boolexpr
    (29) boolexpr -> . atom
    (30) boolexpr -> . LPAREN boolexpr RPAREN
    (31) boolexpr -> . numexpr GT numexpr
    (32) boolexpr -> . numexpr LT numexpr
    (33) boolexpr -> . numexpr GEQ numexpr
    (34) boolexpr -> . numexpr LEQ numexpr
    (35) boolexpr -> . numexpr EQ numexpr
    (48) atom -> . ID
    (49) atom -> . ID LPAREN termlist RPAREN
    (39) numexpr -> . LPAREN numexpr RPAREN
    (40) numexpr -> . NUMBER
    (41) numexpr -> . NID
    (42) numexpr -> . numexpr PLUS numexpr
    (43) numexpr -> . numexpr MINUS numexpr
    (44) numexpr -> . numexpr TIMES numexpr

    PREDICATES      shift and go to state 3
    VARIABLES       shift and go to state 4
    TYPE            shift and go to state 5
    FORSOME         shift and go to state 8
    FORALL          shift and go to state 10
    ATMOST          shift and go to state 11
    ATLEAST         shift and go to state 13
    EXACTLY         shift and go to state 14
    NOT             shift and go to state 15
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    NUMBER          shift and go to state 12
    NID             shift and go to state 18

    spec                           shift and go to state 1
    statement                      shift and go to state 2
    boolexpr                       shift and go to state 7
    atom                           shift and go to state 16
    numexpr                        shift and go to state 17

state 1

    (0) S' -> spec .



state 2

    (1) spec -> statement .
    (2) spec -> statement . spec
    (1) spec -> . statement
    (2) spec -> . statement spec
    (3) statement -> . PREDICATES predlist SEMICOLON
    (6) statement -> . VARIABLES idlist SEMICOLON
    (9) statement -> . TYPE ID EQ setexpr SEMICOLON
    (10) statement -> . boolexpr SEMICOLON
    (18) boolexpr -> . boolexpr AND boolexpr
    (19) boolexpr -> . boolexpr OR boolexpr
    (20) boolexpr -> . boolexpr XOR boolexpr
    (21) boolexpr -> . boolexpr IMPL boolexpr
    (22) boolexpr -> . boolexpr EQVI boolexpr
    (23) boolexpr -> . FORSOME LPAREN paramlist RPAREN boolexpr
    (24) boolexpr -> . FORALL LPAREN paramlist RPAREN boolexpr
    (25) boolexpr -> . ATMOST NUMBER LPAREN paramlist RPAREN boolexpr
    (26) boolexpr -> . ATLEAST NUMBER LPAREN paramlist RPAREN boolexpr
    (27) boolexpr -> . EXACTLY NUMBER LPAREN paramlist RPAREN boolexpr
    (28) boolexpr -> . NOT boolexpr
    (29) boolexpr -> . atom
    (30) boolexpr -> . LPAREN boolexpr RPAREN
    (31) boolexpr -> . numexpr GT numexpr
    (32) boolexpr -> . numexpr LT numexpr
    (33) boolexpr -> . numexpr GEQ numexpr
    (34) boolexpr -> . numexpr LEQ numexpr
    (35) boolexpr -> . numexpr EQ numexpr
    (48) atom -> . ID
    (49) atom -> . ID LPAREN termlist RPAREN
    (39) numexpr -> . LPAREN numexpr RPAREN
    (40) numexpr -> . NUMBER
    (41) numexpr -> . NID
    (42) numexpr -> . numexpr PLUS numexpr
    (43) numexpr -> . numexpr MINUS numexpr
    (44) numexpr -> . numexpr TIMES numexpr

    $end            reduce using rule 1 (spec -> statement .)
    PREDICATES      shift and go to state 3
    VARIABLES       shift and go to state 4
    TYPE            shift and go to state 5
    FORSOME         shift and go to state 8
    FORALL          shift and go to state 10
    ATMOST          shift and go to state 11
    ATLEAST         shift and go to state 13
    EXACTLY         shift and go to state 14
    NOT             shift and go to state 15
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    NUMBER          shift and go to state 12
    NID             shift and go to state 18

    statement                      shift and go to state 2
    spec                           shift and go to state 19
    boolexpr                       shift and go to state 7
    atom                           shift and go to state 16
    numexpr                        shift and go to state 17

state 3

    (3) statement -> PREDICATES . predlist SEMICOLON
    (4) predlist -> . ID SLASH NUMBER
    (5) predlist -> . ID SLASH NUMBER COMMA predlist

    ID              shift and go to state 21

    predlist                       shift and go to state 20

state 4

    (6) statement -> VARIABLES . idlist SEMICOLON
    (7) idlist -> . ID
    (8) idlist -> . ID COMMA idlist

    ID              shift and go to state 23

    idlist                         shift and go to state 22

state 5

    (9) statement -> TYPE . ID EQ setexpr SEMICOLON

    ID              shift and go to state 24


state 6

    (48) atom -> ID .
    (49) atom -> ID . LPAREN termlist RPAREN

    SEMICOLON       reduce using rule 48 (atom -> ID .)
    AND             reduce using rule 48 (atom -> ID .)
    OR              reduce using rule 48 (atom -> ID .)
    XOR             reduce using rule 48 (atom -> ID .)
    IMPL            reduce using rule 48 (atom -> ID .)
    EQVI            reduce using rule 48 (atom -> ID .)
    RPAREN          reduce using rule 48 (atom -> ID .)
    LPAREN          shift and go to state 25


state 7

    (10) statement -> boolexpr . SEMICOLON
    (18) boolexpr -> boolexpr . AND boolexpr
    (19) boolexpr -> boolexpr . OR boolexpr
    (20) boolexpr -> boolexpr . XOR boolexpr
    (21) boolexpr -> boolexpr . IMPL boolexpr
    (22) boolexpr -> boolexpr . EQVI boolexpr

    SEMICOLON       shift and go to state 26
    AND             shift and go to state 27
    OR              shift and go to state 28
    XOR             shift and go to state 29
    IMPL            shift and go to state 30
    EQVI            shift and go to state 31


state 8

    (23) boolexpr -> FORSOME . LPAREN paramlist RPAREN boolexpr

    LPAREN          shift and go to state 32


state 9

    (30) boolexpr -> LPAREN . boolexpr RPAREN
    (39) numexpr -> LPAREN . numexpr RPAREN
    (18) boolexpr -> . boolexpr AND boolexpr
    (19) boolexpr -> . boolexpr OR boolexpr
    (20) boolexpr -> . boolexpr XOR boolexpr
    (21) boolexpr -> . boolexpr IMPL boolexpr
    (22) boolexpr -> . boolexpr EQVI boolexpr
    (23) boolexpr -> . FORSOME LPAREN paramlist RPAREN boolexpr
    (24) boolexpr -> . FORALL LPAREN paramlist RPAREN boolexpr
    (25) boolexpr -> . ATMOST NUMBER LPAREN paramlist RPAREN boolexpr
    (26) boolexpr -> . ATLEAST NUMBER LPAREN paramlist RPAREN boolexpr
    (27) boolexpr -> . EXACTLY NUMBER LPAREN paramlist RPAREN boolexpr
    (28) boolexpr -> . NOT boolexpr
    (29) boolexpr -> . atom
    (30) boolexpr -> . LPAREN boolexpr RPAREN
    (31) boolexpr -> . numexpr GT numexpr
    (32) boolexpr -> . numexpr LT numexpr
    (33) boolexpr -> . numexpr GEQ numexpr
    (34) boolexpr -> . numexpr LEQ numexpr
    (35) boolexpr -> . numexpr EQ numexpr
    (39) numexpr -> . LPAREN numexpr RPAREN
    (40) numexpr -> . NUMBER
    (41) numexpr -> . NID
    (42) numexpr -> . numexpr PLUS numexpr
    (43) numexpr -> . numexpr MINUS numexpr
    (44) numexpr -> . numexpr TIMES numexpr
    (48) atom -> . ID
    (49) atom -> . ID LPAREN termlist RPAREN

    FORSOME         shift and go to state 8
    FORALL          shift and go to state 10
    ATMOST          shift and go to state 11
    ATLEAST         shift and go to state 13
    EXACTLY         shift and go to state 14
    NOT             shift and go to state 15
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 12
    NID             shift and go to state 18
    ID              shift and go to state 6

    boolexpr                       shift and go to state 33
    numexpr                        shift and go to state 34
    atom                           shift and go to state 16

state 10

    (24) boolexpr -> FORALL . LPAREN paramlist RPAREN boolexpr

    LPAREN          shift and go to state 35


state 11

    (25) boolexpr -> ATMOST . NUMBER LPAREN paramlist RPAREN boolexpr

    NUMBER          shift and go to state 36


state 12

    (40) numexpr -> NUMBER .

    GT              reduce using rule 40 (numexpr -> NUMBER .)
    LT              reduce using rule 40 (numexpr -> NUMBER .)
    GEQ             reduce using rule 40 (numexpr -> NUMBER .)
    LEQ             reduce using rule 40 (numexpr -> NUMBER .)
    EQ              reduce using rule 40 (numexpr -> NUMBER .)
    PLUS            reduce using rule 40 (numexpr -> NUMBER .)
    MINUS           reduce using rule 40 (numexpr -> NUMBER .)
    TIMES           reduce using rule 40 (numexpr -> NUMBER .)
    RPAREN          reduce using rule 40 (numexpr -> NUMBER .)
    COMMA           reduce using rule 40 (numexpr -> NUMBER .)
    SEMICOLON       reduce using rule 40 (numexpr -> NUMBER .)
    AND             reduce using rule 40 (numexpr -> NUMBER .)
    OR              reduce using rule 40 (numexpr -> NUMBER .)
    XOR             reduce using rule 40 (numexpr -> NUMBER .)
    IMPL            reduce using rule 40 (numexpr -> NUMBER .)
    EQVI            reduce using rule 40 (numexpr -> NUMBER .)


state 13

    (26) boolexpr -> ATLEAST . NUMBER LPAREN paramlist RPAREN boolexpr

    NUMBER          shift and go to state 37


state 14

    (27) boolexpr -> EXACTLY . NUMBER LPAREN paramlist RPAREN boolexpr

    NUMBER          shift and go to state 38


state 15

    (28) boolexpr -> NOT . boolexpr
    (18) boolexpr -> . boolexpr AND boolexpr
    (19) boolexpr -> . boolexpr OR boolexpr
    (20) boolexpr -> . boolexpr XOR boolexpr
    (21) boolexpr -> . boolexpr IMPL boolexpr
    (22) boolexpr -> . boolexpr EQVI boolexpr
    (23) boolexpr -> . FORSOME LPAREN paramlist RPAREN boolexpr
    (24) boolexpr -> . FORALL LPAREN paramlist RPAREN boolexpr
    (25) boolexpr -> . ATMOST NUMBER LPAREN paramlist RPAREN boolexpr
    (26) boolexpr -> . ATLEAST NUMBER LPAREN paramlist RPAREN boolexpr
    (27) boolexpr -> . EXACTLY NUMBER LPAREN paramlist RPAREN boolexpr
    (28) boolexpr -> . NOT boolexpr
    (29) boolexpr -> . atom
    (30) boolexpr -> . LPAREN boolexpr RPAREN
    (31) boolexpr -> . numexpr GT numexpr
    (32) boolexpr -> . numexpr LT numexpr
    (33) boolexpr -> . numexpr GEQ numexpr
    (34) boolexpr -> . numexpr LEQ numexpr
    (35) boolexpr -> . numexpr EQ numexpr
    (48) atom -> . ID
    (49) atom -> . ID LPAREN termlist RPAREN
    (39) numexpr -> . LPAREN numexpr RPAREN
    (40) numexpr -> . NUMBER
    (41) numexpr -> . NID
    (42) numexpr -> . numexpr PLUS numexpr
    (43) numexpr -> . numexpr MINUS numexpr
    (44) numexpr -> . numexpr TIMES numexpr

    FORSOME         shift and go to state 8
    FORALL          shift and go to state 10
    ATMOST          shift and go to state 11
    ATLEAST         shift and go to state 13
    EXACTLY         shift and go to state 14
    NOT             shift and go to state 15
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    NUMBER          shift and go to state 12
    NID             shift and go to state 18

    boolexpr                       shift and go to state 39
    atom                           shift and go to state 16
    numexpr                        shift and go to state 17

state 16

    (29) boolexpr -> atom .

    SEMICOLON       reduce using rule 29 (boolexpr -> atom .)
    AND             reduce using rule 29 (boolexpr -> atom .)
    OR              reduce using rule 29 (boolexpr -> atom .)
    XOR             reduce using rule 29 (boolexpr -> atom .)
    IMPL            reduce using rule 29 (boolexpr -> atom .)
    EQVI            reduce using rule 29 (boolexpr -> atom .)
    RPAREN          reduce using rule 29 (boolexpr -> atom .)


state 17

    (31) boolexpr -> numexpr . GT numexpr
    (32) boolexpr -> numexpr . LT numexpr
    (33) boolexpr -> numexpr . GEQ numexpr
    (34) boolexpr -> numexpr . LEQ numexpr
    (35) boolexpr -> numexpr . EQ numexpr
    (42) numexpr -> numexpr . PLUS numexpr
    (43) numexpr -> numexpr . MINUS numexpr
    (44) numexpr -> numexpr . TIMES numexpr

    GT              shift and go to state 40
    LT              shift and go to state 41
    GEQ             shift and go to state 42
    LEQ             shift and go to state 43
    EQ              shift and go to state 44
    PLUS            shift and go to state 45
    MINUS           shift and go to state 46
    TIMES           shift and go to state 47


state 18

    (41) numexpr -> NID .

    GT              reduce using rule 41 (numexpr -> NID .)
    LT              reduce using rule 41 (numexpr -> NID .)
    GEQ             reduce using rule 41 (numexpr -> NID .)
    LEQ             reduce using rule 41 (numexpr -> NID .)
    EQ              reduce using rule 41 (numexpr -> NID .)
    PLUS            reduce using rule 41 (numexpr -> NID .)
    MINUS           reduce using rule 41 (numexpr -> NID .)
    TIMES           reduce using rule 41 (numexpr -> NID .)
    RPAREN          reduce using rule 41 (numexpr -> NID .)
    COMMA           reduce using rule 41 (numexpr -> NID .)
    SEMICOLON       reduce using rule 41 (numexpr -> NID .)
    AND             reduce using rule 41 (numexpr -> NID .)
    OR              reduce using rule 41 (numexpr -> NID .)
    XOR             reduce using rule 41 (numexpr -> NID .)
    IMPL            reduce using rule 41 (numexpr -> NID .)
    EQVI            reduce using rule 41 (numexpr -> NID .)


state 19

    (2) spec -> statement spec .

    $end            reduce using rule 2 (spec -> statement spec .)


state 20

    (3) statement -> PREDICATES predlist . SEMICOLON

    SEMICOLON       shift and go to state 48


state 21

    (4) predlist -> ID . SLASH NUMBER
    (5) predlist -> ID . SLASH NUMBER COMMA predlist

    SLASH           shift and go to state 49


state 22

    (6) statement -> VARIABLES idlist . SEMICOLON

    SEMICOLON       shift and go to state 50


state 23

    (7) idlist -> ID .
    (8) idlist -> ID . COMMA idlist

    SEMICOLON       reduce using rule 7 (idlist -> ID .)
    COMMA           shift and go to state 51


state 24

    (9) statement -> TYPE ID . EQ setexpr SEMICOLON

    EQ              shift and go to state 52


state 25

    (49) atom -> ID LPAREN . termlist RPAREN
    (45) termlist -> . term COMMA termlist
    (46) termlist -> . term
    (47) term -> . numexpr
    (39) numexpr -> . LPAREN numexpr RPAREN
    (40) numexpr -> . NUMBER
    (41) numexpr -> . NID
    (42) numexpr -> . numexpr PLUS numexpr
    (43) numexpr -> . numexpr MINUS numexpr
    (44) numexpr -> . numexpr TIMES numexpr

    LPAREN          shift and go to state 53
    NUMBER          shift and go to state 12
    NID             shift and go to state 18

    termlist                       shift and go to state 54
    term                           shift and go to state 55
    numexpr                        shift and go to state 56

state 26

    (10) statement -> boolexpr SEMICOLON .

    PREDICATES      reduce using rule 10 (statement -> boolexpr SEMICOLON .)
    VARIABLES       reduce using rule 10 (statement -> boolexpr SEMICOLON .)
    TYPE            reduce using rule 10 (statement -> boolexpr SEMICOLON .)
    FORSOME         reduce using rule 10 (statement -> boolexpr SEMICOLON .)
    FORALL          reduce using rule 10 (statement -> boolexpr SEMICOLON .)
    ATMOST          reduce using rule 10 (statement -> boolexpr SEMICOLON .)
    ATLEAST         reduce using rule 10 (statement -> boolexpr SEMICOLON .)
    EXACTLY         reduce using rule 10 (statement -> boolexpr SEMICOLON .)
    NOT             reduce using rule 10 (statement -> boolexpr SEMICOLON .)
    LPAREN          reduce using rule 10 (statement -> boolexpr SEMICOLON .)
    ID              reduce using rule 10 (statement -> boolexpr SEMICOLON .)
    NUMBER          reduce using rule 10 (statement -> boolexpr SEMICOLON .)
    NID             reduce using rule 10 (statement -> boolexpr SEMICOLON .)
    $end            reduce using rule 10 (statement -> boolexpr SEMICOLON .)


state 27

    (18) boolexpr -> boolexpr AND . boolexpr
    (18) boolexpr -> . boolexpr AND boolexpr
    (19) boolexpr -> . boolexpr OR boolexpr
    (20) boolexpr -> . boolexpr XOR boolexpr
    (21) boolexpr -> . boolexpr IMPL boolexpr
    (22) boolexpr -> . boolexpr EQVI boolexpr
    (23) boolexpr -> . FORSOME LPAREN paramlist RPAREN boolexpr
    (24) boolexpr -> . FORALL LPAREN paramlist RPAREN boolexpr
    (25) boolexpr -> . ATMOST NUMBER LPAREN paramlist RPAREN boolexpr
    (26) boolexpr -> . ATLEAST NUMBER LPAREN paramlist RPAREN boolexpr
    (27) boolexpr -> . EXACTLY NUMBER LPAREN paramlist RPAREN boolexpr
    (28) boolexpr -> . NOT boolexpr
    (29) boolexpr -> . atom
    (30) boolexpr -> . LPAREN boolexpr RPAREN
    (31) boolexpr -> . numexpr GT numexpr
    (32) boolexpr -> . numexpr LT numexpr
    (33) boolexpr -> . numexpr GEQ numexpr
    (34) boolexpr -> . numexpr LEQ numexpr
    (35) boolexpr -> . numexpr EQ numexpr
    (48) atom -> . ID
    (49) atom -> . ID LPAREN termlist RPAREN
    (39) numexpr -> . LPAREN numexpr RPAREN
    (40) numexpr -> . NUMBER
    (41) numexpr -> . NID
    (42) numexpr -> . numexpr PLUS numexpr
    (43) numexpr -> . numexpr MINUS numexpr
    (44) numexpr -> . numexpr TIMES numexpr

    FORSOME         shift and go to state 8
    FORALL          shift and go to state 10
    ATMOST          shift and go to state 11
    ATLEAST         shift and go to state 13
    EXACTLY         shift and go to state 14
    NOT             shift and go to state 15
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    NUMBER          shift and go to state 12
    NID             shift and go to state 18

    boolexpr                       shift and go to state 57
    atom                           shift and go to state 16
    numexpr                        shift and go to state 17

state 28
